@@ -1,5 +1,12 @@
 2006-04-04  Kjartan Maraas  <kmaraas@gnome.org>
 
+	* libgnome/gnome-exec.c: (gnome_prepend_terminal_to_vector):
+	Fix for 'run in terminal' launchers with gnome-terminal as
+	the preferred terminal. Patch from Vincent Vuntz. Closes
+	bug #336542.
+
+2006-04-04  Kjartan Maraas  <kmaraas@gnome.org>
+
 	* libgnome/gnome-init.c: (libgnome_option_cb): Fix
 	--espeaker option. Closes bug #333932. Patch from 
 	Michael H. Schimek.
